--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+
+/* backgroubd untuk hero section beranda */
+.bg-img-hero-section-beranda {
+    background-image: url(img/hero-section-beranda.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
