--- a/shared/tema.css
+++ b/shared/tema.css
@@ -52,7 +52,7 @@ body[data-theme="pink"] {
   --bg-main-dark: #B33791;
   --bg-card: #ffffff;
   --text-subtle: #9d174d;
-  --border-color: #fbcfe8;
+  --border-color: #EC4899;
   --border-main-dark: #B33791;
 }
 
@@ -64,7 +64,7 @@ body[data-theme="blue"] {
   --bg-main-dark: #1e3a8a;
   --bg-card: #ffffff;
   --text-subtle: #1e40af;
-  --border-color: #010202;
+  --border-color: #3B82F6;
   --border-main-dark: #1D4ED8;
 }
 
@@ -75,12 +75,25 @@ body[data-theme="blue"] .bg-main {
   background-color: var(--bg-main) !important;
 }
 
+body[data-theme="default"] .bg-main-light,
+body[data-theme="pink"] .bg-main-light,
+body[data-theme="blue"] .bg-main-light {
+  background-color: var(--bg-main-light) !important;
+}
+
 /* Preset subtle */
 body[data-theme="default"] .bg-subtle,
 body[data-theme="pink"] .bg-subtle,
 body[data-theme="blue"] .bg-subtle {
   background-color: var(--bg-main-subtle) !important;
 }
+
+body[data-theme="default"] .bg-hover-subtle:hover,
+body[data-theme="pink"] .bg-hover-subtle:hover,
+body[data-theme="blue"] .bg-hover-subtle:hover {
+  background-color: var(--bg-main-subtle) !important;
+}
+
 /* Preset dark */
 body[data-theme="default"] .bg-main-dark,
 body[data-theme="pink"] .bg-main-dark,
@@ -88,17 +101,47 @@ body[data-theme="blue"] .bg-main-dark {
   background-color: var(--bg-main-dark) !important;
 }
 
+body[data-theme="default"] .bg-hover-dark:hover,
+body[data-theme="pink"] .bg-hover-dark:hover,
+body[data-theme="blue"] .bg-hover-dark:hover {
+  background-color: var(--bg-main-dark) !important;
+}
+
+
+body[data-theme="default"] .bg-after-dark::after,
+body[data-theme="pink"] .bg-after-dark::after,
+body[data-theme="blue"] .bg-after-dark::after {
+  background-color: var(--bg-main-dark) !important;
+}
+
+/* teks main */
 body[data-theme="default"] .text-main,
 body[data-theme="pink"] .text-main,
 body[data-theme="blue"] .text-main {
   color: var(--bg-main) !important;
 }
+
+/* text dark */
+body[data-theme="default"] .text-main-dark,
+body[data-theme="pink"] .text-main-dark,
+body[data-theme="blue"] .text-main-dark {
+  color: var(--bg-main-dark) !important;
+}
+
+body[data-theme="default"] .text-hover-dark:hover,
+body[data-theme="pink"] .text-hover-dark:hover,
+body[data-theme="blue"] .text-hover-dark:hover {
+  color: var(--bg-main-dark) !important;
+}
+
+/* border main */
 body[data-theme="default"] .border-main,
 body[data-theme="pink"] .border-main,
 body[data-theme="blue"] .border-main {
   border-color: var(--border-color) !important;
 }
 
+/* border dark */
 body[data-theme="default"] .border-main-dark,
 body[data-theme="pink"] .border-main-dark,
 body[data-theme="blue"] .border-main-dark {
@@ -106,13 +149,34 @@ body[data-theme="blue"] .border-main-dark {
 }
 
 /* === Custom Theme (via Picker) === */
-body[data-theme="custom"] .bg-main { background-color: var(--primary-500) !important; }
-body[data-theme="custom"] .bg-main-light { background-color: var(--primary-300) !important; }
-body[data-theme="custom"] .bg-main-dark { background-color: var(--primary-700) !important; }
-body[data-theme="custom"] .bg-subtle { background-color: var(--primary-50) !important;}
-body[data-theme="custom"] .text-main { color: var(--primary-500) !important; }
-body[data-theme="custom"] .text-main-light { color: var(--primary-300) !important; }
-body[data-theme="custom"] .text-main-dark { color: var(--primary-700) !important; }
 
+/* bg main */
+body[data-theme="custom"] .bg-main { background-color: var(--primary-500) !important; }
+
+/* bg light */
+body[data-theme="custom"] .bg-main-light { background-color: var(--primary-300) !important; }
+
+/* bg dark */
+body[data-theme="custom"] .bg-main-dark { background-color: var(--primary-700) !important; }
+body[data-theme="custom"] .bg-hover-dark:hover { background-color: var(--primary-700) !important; }
+body[data-theme="custom"] .bg-after-dark::after { background-color: var(--primary-700) !important; }
+
+/* bg subtle */
+body[data-theme="custom"] .bg-subtle { background-color: var(--primary-50) !important;}
+body[data-theme="custom"] .bg-hover-subtle:hover { background-color: var(--primary-50) !important;}
+
+/* text main */
+body[data-theme="custom"] .text-main { color: var(--primary-500) !important; }
+
+/* text main light */
+body[data-theme="custom"] .text-main-light { color: var(--primary-300) !important; }
+
+/* text main dark */
+body[data-theme="custom"] .text-main-dark { color: var(--primary-700) !important; }
+body[data-theme="custom"] .text-hover-dark:hover { color: var(--primary-700) !important; }
+
+/* border main */
 body[data-theme="custom"] .border-main { border-color: var(--primary-500) !important; }
+
+/* border main dark */
 body[data-theme="custom"] .border-main-dark { border-color: var(--primary-700) !important; }
